Target Java 8 so legacy consumers can load the SDK; version 1.4.1
The 1.3.2/1.4.0 artifacts were compiled with --release 17, which legacy
Java 8 services (featureflow-server) can neither compile against nor
load. Shipped classes now build with --release 8 (tests stay on 17 via
testRelease); the few Java 9+ usages are replaced with Java 8
equivalents, keeping the X-Featureflow-Application tag support intact.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>